istio-dr-slow.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: bff-dr
  namespace: bff
spec:
  host: cnhsit
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
      tcp:
        maxConnections: 1
    outlierDetection:
      baseEjectionTime: 1m
      consecutive5xxErrors: 1
      interval: 1s
      maxEjectionPercent: 100
  subsets:
    - labels:
        version: v1
      name: version-v1
    - labels:
        version: v2
      name: version-v2
