istio-dr.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: bff-dr
  namespace: bff
spec:
  host: cnhsit
  subsets:
    - labels:
        version: v1
      name: version-v1
    - labels:
        version: v2
      name: version-v2
      trafficPolicy:
        connectionPool:
          http:
            http1MaxPendingRequests: 1
            maxRequestsPerConnection: 1
          tcp:
            maxConnections: 1
        outlierDetection:
          baseEjectionTime: 30s
          consecutive5xxErrors: 2
          interval: 10s
          maxEjectionPercent: 100
