istio-vs.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: bff-vs
  namespace: bff
spec:
  hosts:
    - '*'
  gateways:
    - bff-gw
  http:
    - match:
        - uri:
            prefix: /cb
      retries:
        attempts: 6
        perTryTimeout: 6s
      route:
        - destination:
            host: cnhsit
            port:
              number: 8080
            subset: version-v1
          weight: 50
        - destination:
            host: cnhsit
            port:
              number: 8080
            subset: version-v2
          weight: 50
    - match:
        - uri:
            prefix: /cdhusts
      route:
        - destination:
            host: cdhusts
            port:
              number: 8080
    - match:
        - uri:
            prefix: /cnhrenov
      route:
        - destination:
            host: cnhrenov
            port:
              number: 8080
    - match:
        - uri:
            prefix: /cnhstsrenov
      route:
        - destination:
            host: cnhstsrenov
            port:
              number: 8080
    - match:
        - uri:
            prefix: /cnhstsproc
      route:
        - destination:
            host: cnhstsproc
            port:
              number: 8080
    - match:
        - uri:
            prefix: /cnhboleto
      route:
        - destination:
            host: cnhboleto
            port:
              number: 8080
